--- a/simple/templates/index.jinja2
+++ b/simple/templates/index.jinja2
@@ -1,12 +1,15 @@
 <!doctype html>
 <title>Ceph RADOS Gateway</title>
+<head>
+  <link rel="stylesheet" type="text/css" href="static/folder.css">
+</head>
 
 <ul>
 {% for bucket in items %}
-  <li>(b) {{ bucket.bucket_name }}
+  <li>{{ bucket.bucket_name }}
     <ul>
     {% for key in bucket['keys'] %}
-      <li>(k) {{ key.key_name }} </li>
+      <li>{{ key.key_name }} </li>
     {% endfor %}
     </ul>
   </li>
